# RL_the_SM

./: .gitignore  CLAUDE.md  GT Invariants.ipynb  README.md  pyproject.toml
Mathematica/: GenericTools.m  GroupMath.m  LieAlgebras.m  PacletInfo.m  PermutationGroup.m  README.md  pre_computed_data  spinSinglets.m  spinSinglets.nb
Mathematica/Documentation/English/Index/: _0.cfs  segments_3
Mathematica/Documentation/English/ReferencePages/Symbols/: Adjoint.nb  CMtoFamilyAndSeries.nb  CMtoName.nb  CartanMatrix.nb  Casimir.nb  ConjugacyClass.nb  ConjugacyClassGroupModIndices.nb  ConjugateIrrep.nb  ConvertPartitionToDynkinCoef.nb  ConvertToPartitionNotation.nb  DecomposeRep.nb  DecomposeSnProduct.nb  DimR.nb  DominantConjugate.nb  DominantWeights.nb  DynkinIndex.nb  Embeddings.nb  (+33 more)
Mathematica/Documentation/English/SpellIndex/: _d.cfs  segments_t
Mathematica/Documentation/English/Tutorials/: GroupMathDoc.nb
Mathematica/Kernel/: init.m
docs/: reward_metrics.md
notebooks/: walkthrough.ipynb
scripts/: doctor.py  engine_smoke.py  env_smoke.py  phase0_validate.py  train.py  train_ppo.py  trial_ppo.py
slurm/: f1fix.sbatch  f1fix_su3.sbatch
sm_rl/: __init__.py  config.py
sm_rl/algos/: __init__.py  base.py  ppo.py
sm_rl/env/: __init__.py  actions.py  sm_env.py  state.py
sm_rl/models/: __init__.py  tokenizer.py  transformer.py
sm_rl/physics/: __init__.py  cache.py  engine.py  groups.py  spectrum.py
sm_rl/reward/: __init__.py  base.py  count.py  f1.py  hungarian.py  target.py
sm_rl/utils/: __init__.py  logging.py
tests/: mock_engine.py  test_core.py
(+6 files in other folders)
